syntax = "proto3";
package observe;
option go_package = "/pb";


service ObserveService {
  rpc GetStatus (GetStatusRequest) returns (GetStatusResponse);
}

message GetStatusRequest {}

message GetStatusResponse{
  string PodID = 1;
  string XRequestID = 2;
  string TraceID = 3;
  string SpanID = 4;
}

message MockOptionRequest {
  uint64 InjectTimeout = 1; // infect timeout with second
  uint32 InjectErrorCode = 2; // inject error with gRPC error code
  float burnVCPU = 3;
  float burnGMEM = 4;
}